--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java Script</title>
-
+<style>
+    *{
+        background-color: rgb(2, 24, 33);
+        color: aliceblue;
+        text-align: center;
+    }
+</style>
 </head>
 <body>
-    <h1>Marlon Burbano</h1>
+<h1>APP</h1>
+    
 </body>
 <script src="index.js"></script>
 </html> 
